@@ -63,7 +63,7 @@ class ContactViewContact extends JView
 		// Built the actions for new and existing records.
 		if ($isNew)  {
 			// For new records, check the create permission.
-			if ($canDo->get('core.create')) {
+			if ($isNew && (count($user->getAuthorisedCategories('com_contact', 'core.create')) > 0)) {
 				JToolBarHelper::apply('contact.apply', 'JTOOLBAR_APPLY');
 				JToolBarHelper::save('contact.save', 'JTOOLBAR_SAVE');
 				JToolBarHelper::custom('contact.save2new', 'save-new.png', 'save-new_f2.png', 'JTOOLBAR_SAVE_AND_NEW', false);
