@@ -59,11 +59,11 @@ class NewsfeedsViewNewsfeed extends JView
 		JToolBarHelper::title(JText::_('COM_NEWSFEEDS_MANAGER_NEWSFEED'), 'newsfeeds.png');
 
 		// If not checked out, can save the item.
-		if (!$checkedOut && ($canDo->get('core.edit')||($canDo->get('core.create')))) {
+		if (!$checkedOut && ($canDo->get('core.edit')||count($user->getAuthorisedCategories('com_newsfeeds', 'core.create')) > 0)) {
 			JToolBarHelper::apply('newsfeed.apply', 'JTOOLBAR_APPLY');
 			JToolBarHelper::save('newsfeed.save', 'JTOOLBAR_SAVE');
 		}
-		if (!$checkedOut && $canDo->get('core.create')){		
+		if (!$checkedOut && count($user->getAuthorisedCategories('com_newsfeeds', 'core.create')) > 0){		
 			JToolBarHelper::custom('newsfeed.save2new', 'save-new.png', 'save-new_f2.png', 'JTOOLBAR_SAVE_AND_NEW', false);
 		}
 		// If an existing item, can save to a copy.
